# krkn-ai

./: .gitignore  README.md  ollama_example.py  pyproject.toml  requirements.txt  run_krkn_ai.py
chaos_ai/algorithm/: genetic.py
chaos_ai/chaos_engines/: health_check_watcher.py  krkn_runner.py
chaos_ai/cli/: cmd.py
chaos_ai/models/: app.py  config.py
chaos_ai/models/scenario/: base.py  factory.py  parameters.py  scenario_app_outage.py  scenario_container.py  scenario_cpu_hog.py  scenario_dummy.py  scenario_memory_hog.py  scenario_pod.py  scenario_time.py
chaos_ai/reporter/: generations_reporter.py  health_check_reporter.py
chaos_ai/templates/: chaos-ai.yaml.j2
chaos_ai/utils/: cluster_manager.py  fs.py  rng.py
config/: config.yaml  robot-shop-default.yaml
krkn-ai/: trainer.py
krkn_ai/: data_retriever.py  trainer.py
krkn_ai/abc/: ai_model.py  ai_scenario.py  ai_scenario_factory.py
krkn_ai/algorithm/: genetic.py
krkn_ai/chaos_engines/: health_check_watcher.py  krkn_runner.py
krkn_ai/cli/: cmd.py
krkn_ai/llm/: __init__.py  krkn_ollama.py  model_factory.py
krkn_ai/models/: cluster_components.py  config.py  custom_errors.py
krkn_ai/models/scenario/: base.py  factory.py  (+11 more)
krkn_ai/reporter/: generations_reporter.py  health_check_reporter.py
krkn_ai/scenarios/: __init__.py  exit_code_scenario.py  scenario_factory.py
krkn_ai/templates/: krkn-ai.yaml.j2
krkn_ai/tests/: __init__.py  data_retriever_test.py  dummy_scenario.py  scenario_factory_test.py
krkn_ai/utils/: __init__.py  cluster_manager.py  fs.py  logger.py  prometheus.py  rng.py
